[project]
name = "agentic-blog-generator"
version = "0.1.0"
description = "A multi-agent blog generation system using specialized AI agents."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.21",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
]
